--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,1 +1,181 @@
-ok
+<!doctype html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
+<!-- Consider adding an manifest.appcache: h5bp.com/d/Offline -->
+<!--[if gt IE 9]><!--> <html class="no-js" lang="en" itemscope itemtype="http://schema.org/Product"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+
+	<!-- Use the .htaccess and remove these lines to avoid edge case issues.
+			 More info: h5bp.com/b/378 -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	<title>No Trolls Allowed</title>
+	<meta name="description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!" />
+	<meta name="keywords" content="Troliai, ntacamp, hackercamp, hackers, makers, gamers, dirbtuvės" />
+
+	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+
+	<!-- Facebook Metadata /-->
+	<meta property="fb:page_id" content="104373726440188" />
+    <meta property="og:url" content="http://www.notrollsallowed.com/">
+    <meta property="og:title" content="No Trolls Allowed">
+    <meta property="og:description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!">
+    <meta property="og:image" content="2015.notrollsallowed.com/images/logo.png"/>
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="135">
+    <meta property="og:image:height" content="135">
+
+	<!-- Google+ Metadata /-->
+	<meta itemprop="name" content="No Trolls Allowed">
+	<meta itemprop="description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!">
+	<meta itemprop="image" content="http://www.notrollsallowed.com/img/background-017.jpg">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+	<!-- We highly recommend you use SASS and write your custom styles in sass/_custom.scss.
+		 However, there is a blank style.css in the css directory should you prefer -->
+	<link rel="stylesheet" href="/css/gumby.css">
+	<link rel="stylesheet" href="/css/style.css">
+
+	<script src="/js/libs/modernizr-2.6.2.min.js"></script>
+</head>
+
+<body>
+<div class="navcontain">
+	<div class="navbar default unfixed" id="nav2">
+		<div class="row">
+			<a class="toggle" gumby-trigger="#nav2 > ul" href="#"><i class="icon-menu"></i></a>
+			<div class="seven columns logo"></div>
+			<ul class="five columns">
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://blog.notrollsallowed.com/">Blog</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2015.notrollsallowed.com/">2015</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2014.notrollsallowed.com/">2014</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2013.notrollsallowed.com/">2013</a>
+					</span>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="seven columns">
+			<h2><span class="box">Pirmas ir vienintelis hackercamp'as Lietuvoje!</span></h2>
+			<h1 class="lead"><span class="box">No Trolls Allowed 2016</span></h1>
+			<h4><span class="box">Liepos 21 - 24d.</span><!-- <a href="" class="box btn">Registruotis</a>--></h4>
+			<br>
+			<br>
+			<br>
+		</div>
+		<div class="five columns">
+			<img src="/img/logo-full.png" alt="" class="logo" gumby-retina>
+		</div>
+	</div>
+</div>
+<div class="clearfix"></div>
+<div class="row">
+	<div class="footer">
+		<p class="box">No Trolls Allowed yra hakerių, inžinierių, mokslininkų, makerių, menininkų ir įvairaus plauko geekų susibūrimas gamtoje, po atviru dangumi. 
+			Pagrindinis renginio tikslas - suburti bendraminčius, norinčius papasakoti apie savo veiklą, parodyti savo projektus, suorganizuoti kūrybines dirbtuves, kur kartu su kitais renginio dalyviais galėtų eksperimentuoti.
+			<br>Renginio pavadinimas atspindi renginio dvasią, "No Trolls Allowed" - nelaukiame jokių trolių, laukiame žmonių turinčių kuo pasidalinti, tad kiekvienas dalyvis privalo pasiruošti pranešimą ir jį pristatyti renginio metu.
+			<br>Pranešimo temos gali būti labai plačios - nuo psichologijos, stalo žaidimų iki funkcinio programavimo, algoritmų, litavimo dirbtuvių (<a href="http://2015.notrollsallowed.com/pranesimai">NTA 2015 temos</a>).
+			</p>
+			<br><br>
+		<p class="box">Sekite naujienas <a href="https://twitter.com/ntacamp">Twitter</a>, <a href="https://www.facebook.com/NoTrollsAllowed">Facebook</a> ir mūsų <a href="http://blog.notrollsallowed.com"><b>BLOG'e</b></a>.</p><br>
+		<p class="box">Turite idėjų, klausimų? Rašykite <a href="mailto:hi@notrollsallowed.com">hi@notrollsallowed.com</a>.</p>
+		<br>
+		<p class="box"><small>Renginys organizuojamas ne pelno organizacijos VšĮ "Programuotojai" įm. kodas 303307623</small>.</p>
+	</div>
+</div>
+
+	<!-- Grab Google CDN's jQuery, fall back to local if offline -->
+	<!-- 2.0 for modern browsers, 1.10 for .oldie -->
+	<script>
+	var oldieCheck = Boolean(document.getElementsByTagName('html')[0].className.match(/\soldie\s/g));
+	if(!oldieCheck) {
+	document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"><\/script>');
+	} else {
+	document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>');
+	}
+	</script>
+	<script>
+	if(!window.jQuery) {
+	if(!oldieCheck) {
+	  document.write('<script src="/js/libs/jquery-2.0.2.min.js"><\/script>');
+	} else {
+	  document.write('<script src="/js/libs/jquery-1.10.1.min.js"><\/script>');
+	}
+	}
+	</script>
+
+	<!--
+	Include gumby.js followed by UI modules followed by gumby.init.js
+	Or concatenate and minify into a single file -->
+	<script gumby-touch="/js/libs" src="/js/libs/gumby.js"></script>
+	<script src="/js/libs/ui/gumby.retina.js"></script>
+	<script src="/js/libs/gumby.init.js"></script>
+
+	<!--
+	Google's recommended deferred loading of JS
+	gumby.min.js contains gumby.js, all UI modules and gumby.init.js
+
+	Note: If you opt to use this method of defered loading,
+	ensure that any javascript essential to the initial
+	display of the page is included separately in a normal
+	script tag.
+
+	<script type="text/javascript">
+	function downloadJSAtOnload() {
+	var element = document.createElement("script");
+	element.src = "js/libs/gumby.min.js";
+	document.body.appendChild(element);
+	}
+	if (window.addEventListener)
+	window.addEventListener("load", downloadJSAtOnload, false);
+	else if (window.attachEvent)
+	window.attachEvent("onload", downloadJSAtOnload);
+	else window.onload = downloadJSAtOnload;
+	</script> -->
+
+	<script src="/js/plugins.js"></script>
+	<script src="/js/main.js"></script>
+
+	<script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-41181062-1']);
+        _gaq.push(['_setDomainName', 'notrollsallowed.com']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+
+	<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you want to support IE 6.
+	   chromium.org/developers/how-tos/chrome-frame-getting-started -->
+	<!--[if lt IE 7 ]>
+	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+	<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+	<![endif]-->
+
+  </body>
+</html>
+
