Load locales from yaml files

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -87,9 +87,9 @@
 	</div>
 	<div class="row">
 		<div class="seven columns">
-			<h2><span class="box">Pirmas ir vienintelis hackercamp'as Lietuvoje!</span></h2>
+            <h2><span class="box">{{ 'Pirmas ir vienintelis hackercamp\'as Lietuvoje!'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed 2016</span></h1>
-			<h4><span class="box">Liepos 21 - 24d.</span><!-- <a href="" class="box btn">Registruotis</a>--></h4>
+			<h4><span class="box">Liepos 21-24d.</span><!-- <a href="" class="box btn">Registruotis</a>--></h4>
 			<br>
 			<br>
 			<br>
