--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -53,7 +53,7 @@
 			<ul class="five columns">
 				<li>
 					<span class="medium pretty default btn">
-						<a href="http://blog.notrollsallowed.com/">Blog</a>
+                        <a href="http://blog.notrollsallowed.com/">{{'blog'|trans}}</a>
 					</span>
 				</li>
 				<li>
@@ -87,9 +87,9 @@
 	</div>
 	<div class="row">
 		<div class="seven columns">
-            <h2><span class="box">{{ 'Pirmas ir vienintelis hackercamp\'as Lietuvoje!'|trans }}</span></h2>
+            <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed 2016</span></h1>
-			<h4><span class="box">Liepos 21-24d.</span><!-- <a href="" class="box btn">Registruotis</a>--></h4>
+            <h4><span class="box">{{'july'|trans}} 21-24d.</span></h4>
 			<br>
 			<br>
 			<br>
@@ -106,12 +106,10 @@
 			Pagrindinis renginio tikslas - suburti bendraminčius, norinčius papasakoti apie savo veiklą, parodyti savo projektus, suorganizuoti kūrybines dirbtuves, kur kartu su kitais renginio dalyviais galėtų eksperimentuoti.
 			<br>Renginio pavadinimas atspindi renginio dvasią, "No Trolls Allowed" - nelaukiame jokių trolių, laukiame žmonių turinčių kuo pasidalinti, tad kiekvienas dalyvis privalo pasiruošti pranešimą ir jį pristatyti renginio metu.
 			<br>Pranešimo temos gali būti labai plačios - nuo psichologijos, stalo žaidimų iki funkcinio programavimo, algoritmų, litavimo dirbtuvių (<a href="http://2015.notrollsallowed.com/pranesimai">NTA 2015 temos</a>).
-			</p>
-			<br><br>
-		<p class="box">Sekite naujienas <a href="https://twitter.com/ntacamp">Twitter</a>, <a href="https://www.facebook.com/NoTrollsAllowed">Facebook</a> ir mūsų <a href="http://blog.notrollsallowed.com"><b>BLOG'e</b></a>.</p><br>
-		<p class="box">Turite idėjų, klausimų? Rašykite <a href="mailto:hi@notrollsallowed.com">hi@notrollsallowed.com</a>.</p>
-		<br>
-		<p class="box"><small>Renginys organizuojamas ne pelno organizacijos VšĮ "Programuotojai" įm. kodas 303307623</small>.</p>
+        </p>
+        <br><br>
+        <p class="box">{{'follow_us'|trans}} <a href="https://twitter.com/ntacamp">Twitter</a>, <a href="https://www.facebook.com/NoTrollsAllowed">Facebook</a> {{'and'|trans}} <a href="http://blog.notrollsallowed.com"><b>{{'on_blog'|trans}}</b></a>.</p><br>
+        <p class="box">{{'contact_us'|trans}} <a href="mailto:hi@notrollsallowed.com">hi@notrollsallowed.com</a>.</p>
 	</div>
 </div>
 
