Update landing page title

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -13,7 +13,7 @@
 			 More info: h5bp.com/b/378 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>No Trolls Allowed</title>
+	<title>Hackercamp No Trolls Allowed 2017</title>
 	<meta name="description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!" />
 	<meta name="keywords" content="Troliai, ntacamp, hackercamp, hackers, makers, gamers, dirbtuvės" />
 
