Anounce date for 2017 event

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -94,7 +94,7 @@
 		<div class="seven columns">
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
-
+            <h4><span class="box">2017 {{'july'|trans}} 26-30 d.</span></h4>
             <br>
 			<br>
 		</div>
