Added links to NTA 2017 event

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -49,11 +49,16 @@
 	<div class="navbar default unfixed" id="nav2">
 		<div class="row">
 			<a class="toggle" gumby-trigger="#nav2 > ul" href="#"><i class="icon-menu"></i></a>
-			<div class="six columns logo"></div>
-			<ul class="six columns">
+			<div class="five columns logo"></div>
+			<ul class="seven columns">
 				<li>
 					<span class="medium pretty default btn">
                         <a href="http://blog.notrollsallowed.com/">{{'blog'|trans}}</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2017.notrollsallowed.com/">2017</a>
 					</span>
 				</li>
 				<li>
@@ -95,6 +100,9 @@
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
             <h4><span class="box">2017 {{'july'|trans}} 26-30 d.</span></h4>
+            <h4>
+                <div class="pretty large warning btn"><a href="http://2017.notrollsallowed.com/t/register">{{'register'|trans}}</a></div>
+            </h4>
             <br>
 			<br>
 		</div>
