Update page from 2017

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -13,7 +13,7 @@
 			 More info: h5bp.com/b/378 -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Hackercamp No Trolls Allowed 2017</title>
+	<title>Hackercamp No Trolls Allowed</title>
 	<meta name="description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!" />
 	<meta name="keywords" content="Troliai, ntacamp, hackercamp, hackers, makers, gamers, dirbtuvės" />
 
@@ -24,7 +24,7 @@
     <meta property="og:url" content="http://www.notrollsallowed.com/">
     <meta property="og:title" content="No Trolls Allowed">
     <meta property="og:description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!">
-    <meta property="og:image" content="2015.notrollsallowed.com/images/logo.png"/>
+    <meta property="og:image" content="http://2017.notrollsallowed.com/images/logo.png"/>
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="135">
     <meta property="og:image:height" content="135">
@@ -99,10 +99,10 @@
 		<div class="seven columns">
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
-            <h4><span class="box">2017 {{'july'|trans}} 26-30 d.</span></h4>
-            <h4>
+            <h4><span class="box">2018 {{'july'|trans}} ?? d.</span></h4>
+           {* <h4>
                 <div class="pretty large warning btn"><a href="http://2017.notrollsallowed.com/t/register">{{'register'|trans}}</a></div>
-            </h4>
+            </h4> *}
             <br>
 			<br>
 		</div>
