--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -17,7 +17,7 @@
 	<meta name="description" content="Pirmas ir vienintelis hackercamp'as Lietuvoje! Po atviru dangumi vykstantis renginys, siekiantis suburti įvairių pomėgių turinčius žmones. Čia laukiami progamuotojai, įvairaus plauko geek'ai, mokslininkai, konstruktoriai, artistai, menininkai ir kitų sričių specialistai, galintys ir norintys pasidalinti savo žiniomis. Norite sudalyvauti? Pasiimkite savo šeimyną, maisto, gėrimų, bei palapinę viskam sutalpinti ir atvažiuokite!" />
 	<meta name="keywords" content="Troliai, ntacamp, hackercamp, hackers, makers, gamers, dirbtuvės" />
 
-	<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
 
 	<!-- Facebook Metadata /-->
 	<meta property="fb:page_id" content="104373726440188" />
@@ -99,10 +99,8 @@
 		<div class="seven columns">
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
-            <h4><span class="box">2018 {{'july'|trans}} ?? d.</span></h4>
-           {* <h4>
-                <div class="pretty large warning btn"><a href="http://2017.notrollsallowed.com/t/register">{{'register'|trans}}</a></div>
-            </h4> *}
+            <h4><span class="box">2018 {{'july'|trans}}</span></h4>
+
             <br>
 			<br>
 		</div>
