added link to nta2018

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -49,11 +49,16 @@
 	<div class="navbar default unfixed" id="nav2">
 		<div class="row">
 			<a class="toggle" gumby-trigger="#nav2 > ul" href="#"><i class="icon-menu"></i></a>
-			<div class="five columns logo"></div>
-			<ul class="seven columns">
+			<div class="four columns logo"></div>
+			<ul class="eight columns">
 				<li>
 					<span class="medium pretty default btn">
                         <a href="http://blog.notrollsallowed.com/">{{'blog'|trans}}</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2018.notrollsallowed.com/">2018</a>
 					</span>
 				</li>
 				<li>
