--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -105,9 +105,11 @@
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
             <h4><span class="box">2018 {{'july'|trans}}</span></h4>
-
+            <h4>
+                <div class="pretty large warning btn"><a href="http://2018.notrollsallowed.com/t/register">{{'register'|trans}}</a></div>
+            </h4>
             <br>
-			<br>
+	    <br>
 		</div>
 		<div class="five columns">
 			<img src="/img/logo-full.png" alt="" class="logo" gumby-retina>
