Fix collapsed navigation, when using mobile phone
Using workaround with jQuery to simulate gumby-trigger.
gumby-trigger suppose to toggle "active" class.
Also toggling "fixed" class, so drop down menu would not be bellow main text.

Could be related to: ReferenceError: reference to undefined property "triggered"
Tried fixing "#nav2 > ul" to "#nav2 > .row > ul" (fist element was not found), but it was not enough – so added jQuery workaround.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -48,7 +48,7 @@
 <div class="navcontain">
 	<div class="navbar default unfixed" id="nav2">
 		<div class="row">
-			<a class="toggle" gumby-trigger="#nav2 > ul" href="#"><i class="icon-menu"></i></a>
+			<a class="toggle" href="#"><i class="icon-menu"></i></a>
 			<div class="four columns logo"></div>
 			<ul class="eight columns">
 				<li>
@@ -155,6 +155,7 @@
 	<script gumby-touch="/js/libs" src="/js/libs/gumby.js"></script>
 	<script src="/js/libs/ui/gumby.retina.js"></script>
 	<script src="/js/libs/gumby.init.js"></script>
+	<script src="/js/nav-fix.js"></script>
 
 	<!--
 	Google's recommended deferred loading of JS
