--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -49,11 +49,16 @@
 	<div class="navbar default unfixed" id="nav2">
 		<div class="row">
 			<a class="toggle" href="#"><i class="icon-menu"></i></a>
-			<div class="four columns logo"></div>
-			<ul class="eight columns">
+			<div class="three columns logo"></div>
+			<ul class="nine columns">
 				<li>
 					<span class="medium pretty default btn">
                         <a href="http://blog.notrollsallowed.com/">{{'blog'|trans}}</a>
+					</span>
+				</li>
+				<li>
+					<span class="medium pretty default btn">
+						<a href="http://2019.notrollsallowed.com/">2019</a>
 					</span>
 				</li>
 				<li>
