Update register url

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -111,7 +111,7 @@
 			<h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
             <h4><span class="box">2019 {{'july'|trans}} 24-28</span></h4>
             <h4>
-                <div class="pretty large warning btn"><a href="http://2019.notrollsallowed.com/t/register">{{'register'|trans}}</a></div>
+                <div class="pretty large warning btn"><a href="http://2019.notrollsallowed.com/en/t/register">{{'register'|trans}}</a></div>
             </h4>
             <br>
 	    <br>
