--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -108,6 +108,7 @@
 	<div class="row">
 		<div class="seven columns">
             <h2><span class="box">{{ 'first_hackercamp_in_lithuania'|trans }}</span></h2>
+	    <h1 class="lead"><span class="box">No Trolls Allowed</span></h1>
             <br> 
 	    <br>
 	    <br>
